[package]
name = "inx"
version = "0.2.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Rust bindings for IOTA node extensions (INX)"
readme = "README.md"
repository = "https://github.com/iotaledger/inx"
license = "Apache-2.0"
keywords = [ "iota", "plugin", "node", "inx" ]
homepage = "https://www.iota.org"

[dependencies]
prost = { version = "0.10", default-features = false, features = [ "std" ] }
tonic = { version = "0.7", default-features = false, features = [ "codegen", "prost", "transport" ] }

[build-dependencies]
tonic-build = { version = "0.7", default-features = false, features = [ "transport", "prost" ] }
