[package]
name = "bee-inx"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Bee bindings for IOTA node extensions (INX)"
readme = "README.md"
repository = "https://github.com/iotaledger/inx"
license = "Apache-2.0"
keywords = [ "iota", "plugin", "node", "inx", "bee" ]
homepage = "https://www.iota.org"

[dependencies]
inx = { path = "../inx", version = "1.0.0-beta.1", default-features = false }
bee-block-stardust = { package = "bee-block", version = "0.1", git = "https://github.com/iotaledger/bee", branch = "shimmer-develop", default-features = false, features = [ "std" ] }
packable = { version = "0.4", default-features = false }

[dev-dependencies]
tokio = { version = "1.18", default-features = false, features = [ "rt-multi-thread" ] }
futures = { version = "0.3", default-features = false }
