[package]
name = "bee-inx"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Rust bindings for IOTA node extensions (INX)"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "plugin", "node", "inx", "bee" ]
homepage = "https://www.iota.org"

[dependencies]
inx = { path = "../..", version = "1.0.0-beta.2", default-features = false }
bee-block-stardust = { package = "bee-block", git = "https://github.com/grtlr/bee.git", branch = "inx-fix-again", version = "1.0.0-beta.3", default-features = false, features = [ "inx", "std" ], optional = true }

[dev-dependencies]
tokio = { version = "1.18", default-features = false, features = [ "rt-multi-thread" ] }
futures = { version = "0.3", default-features = false }
