[package]
name = "inx"
version = "1.0.0-beta.1"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Rust bindings for IOTA node extensions (INX)"
readme = "README.md"
repository = "https://github.com/iotaledger/inx"
license = "Apache-2.0"
keywords = [ "iota", "plugin", "node", "inx" ]
homepage = "https://www.iota.org"

[dependencies]
prost = { version = "0.10", default-features = false, features = [ "prost-derive", "std" ] }
tonic = { version = "0.7", default-features = false, features = [ "codegen", "prost", "transport" ] }
thiserror = { version = "1.0", default-features = false }

[build-dependencies]
tonic-build = { version = "0.7", default-features = false, features = [ "transport", "prost" ] }
